--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,5 @@
-argcomplete==2.0.0
-beaker==1.12.1
-blivet==3.7.1
-blivet-gui==2.4.2
-brlapi==0.8.4
-chardet==5.2.0
-click==8.1.3
-cupshelpers==1.0
-dasbus==1.7
-dbus-python==1.3.2
-distro==1.8.0
-dnf==4.18.2
-fedora-third-party==0.10
-file-magic==0.4.0
-fqdn==1.5.1
-fros==1.1
-gpg==1.17.1
-humanize==3.13.1
-ipywidgets==8.1.1
-isoduration==20.11.0
-jsonpointer==2.4
-jupyterlab==4.0.10
-langtable==0.0.64
-libcomps==0.1.20
-libdnf==0.72.0
-lxml==4.9.2
-mako==1.2.3
-matplotlib==3.8.2
-nftables==0.1
-olefile==0.46
-paste==3.5.2
-pid==2.2.3
-pip-chill==1.0.3
-productmd==1.38
-progressbar2==3.53.2
-pwquality==1.4.5
-pycairo==1.23.0
-pycrypto==2.6.1
-pycups==2.0.1
-pycurl==7.45.2
-pyenchant==3.2.2
-pygobject==3.44.2
-pykickstart==3.47
-pyopenssl==21.0.0
-pyparted==3.12.0
-pysocks==1.7.1
-python-augeas==1.1.0
-python-meh==0.51
-pyxdg==0.27
-regex==2023.12.25
-requests-file==1.5.1
-requests-ftp==0.3.1
-rpm==4.18.2
-rpmautospec==0.3.8
-scikit-image==0.22.0
-selinux==3.5
-sepolicy==3.5
-setools==4.4.3
-simpleaudio==1.0.4
-simpleitk==2.3.1
-simpleline==1.9.0
-sos==4.5.1
-systemd-python==235
-tempita==0.5.2
-uri-template==1.3.0
-webcolors==1.13
+matplotlib
+pip-chill
+scikit-image
+simpleitk
+numpy 
